# geovac

./: .claudeignore  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  CORE_PRODUCT_STATUS.md  LICENSE  README.md  RELEASE_SUMMARY_v0.2.1.md  SCOPE_BOUNDARY.md  demo_h2.py  pytest.ini  setup.py  test_install.py
.claude/: settings.json  settings.local.json
ADSCFT/: README.md  __init__.py  boundary_to_bulk.py  fine_structure.py  holographic_analysis.py  hyperfine_impedance.py  muonic_hydrogen.py  proton_radius.py
agents/: CITATION_CHECKER.md  CONFIDENCE_AUDITOR.md  CONFIDENCE_REVIEW.md  DECOMPOSER.md  EXPLORER.md  LEADER.md  REVIEWER.md  WORKFLOW.md
benchmarks/: BENCHMARKS.md  DYNAMICS_BENCHMARK.md  commutator_scaling_sweep.py  fine_structure_check.py  gaussian_baseline_comparison.py  pauli_term_scaling.py  qubit_scaling_data.json  qubit_scaling_summary.txt  qubit_scaling_sweep.py  relativistic_comparison.py  su_native_q_table.py  vqe_head_to_head.py
debug/: COMBINED_CORRECTION.md  CROSS_NUCLEAR_ATTENUATION.md  EQUILIBRIUM_FROM_COUPLING.md  HAMILTONIAN_DIAGNOSTIC.md  HD_rotational_HFS_scoping_track4_memo.md  He3_HFS_autopsy_track3_memo.md  KINETIC_DIAGNOSTIC.md  LAMBDA_UNIVERSALITY.md  Li7_HFS_autopsy_track5_memo.md  NUCLEAR_LATTICE_DERIVATION.md  README.md  (+1450 more)
geovac-hamiltonians/: LICENSE  README.md  pyproject.toml
geovac-hamiltonians/src/geovac_hamiltonians/: __init__.py  _composed_qubit.py  _ecosystem_export.py  _gaussian_reference.py  _lattice_index.py  _pk_partitioning.py  _qubit_encoding.py
geovac-hamiltonians/tests/: test_package.py
(+6201 files in other folders)
